--- a/educacao.html
+++ b/educacao.html
@@ -26,7 +26,7 @@
 		  <div class="manu_area">
 			<div class="mainmenu menu-wrap wrap">
 			  <ul id="nav-bottom" class="button_area">
-				<li><a href="/educacao.html">Educação</a></li>
+				<li><a href="/index.html">← Voltar</a></li>
 				<li><a href="/saude.html">Saúde</a></li>
 				<li><a href="/tecnologia.html">Tecnologia</a></li>
 			  </ul>
@@ -34,11 +34,11 @@
 		  </div>
 		</div>
 
-		<p class="maislidas">Matérias mais lidas: </p>
+		<p class="maislidas">Matérias mais lidas de Educação: </p>
 
 		<div class="articles-container">
 
-			<a class="article" href="/paginas/saude001.html">
+			<a class="article-educacao">
 				<figure class="article-image">
 				<img src="/images/saude1-mini-banner.jpg">
 				</figure>
@@ -55,7 +55,7 @@
 				</div>
 			</a>
 
-			<a class="article">
+			<a class="article-educacao">
 				<figure class="article-image">
 				<img src="/images/saude2-mini-banner.png">
 				</figure>
@@ -72,7 +72,7 @@
 				</div>
 			</a>
 
-			<a class="article">
+			<a class="article-educacao">
 				<figure class="article-image">
 				<img src="/images/saude2-mini-banner.png">
 				</figure>
@@ -89,67 +89,10 @@
 				</div>
 			</a>
 
-			<a class="article">
-				<figure class="article-image">
-				<img src="/images/saude1-mini-banner.jpg">
-				</figure>
-				<div class="article-body">
-				<h2 class="article-title">
-					Musculação será determinante na prevenção e tratamento do câncer de próstata
-				</h2>
-				<p class="article-content">
-					O treinamento de força tem forte associação com a prevenção de mortalidade por todas as causas, considerando que o aumento da massa muscular e a força estimulam a resposta metabólica celular, em especial as condições de controle anti-inflamatório e imunológico. >>
-				</p>
-				<footer class="article-info">
-					<i>Por Dr. Aylton Figueira Jr.</i>
-				</footer>
-				</div>
-			</a>
-
-			<a class="article">
-				<figure class="article-image">
-				<img src="/images/saude2-mini-banner.png">
-				</figure>
-				<div class="article-body">
-				<h2 class="article-title">
-					Musculação será determinante na prevenção e tratamento do câncer de próstata
-				</h2>
-				<p class="article-content">
-					O treinamento de força tem forte associação com a prevenção de mortalidade por todas as causas, considerando que o aumento da massa muscular e a força estimulam a resposta metabólica celular, em especial as condições de controle anti-inflamatório e imunológico. >>
-				</p>
-				<footer class="article-info">
-					<i>Por Dr. Aylton Figueira Jr.</i>
-				</footer>
-				</div>
-			</a>
-
-			<a class="article">
-				<figure class="article-image">
-				<img src="/images/saude2-mini-banner.png">
-				</figure>
-				<div class="article-body">
-				<h2 class="article-title">
-					Musculação será determinante na prevenção e tratamento do câncer de próstata
-				</h2>
-				<p class="article-content">
-					O treinamento de força tem forte associação com a prevenção de mortalidade por todas as causas, considerando que o aumento da massa muscular e a força estimulam a resposta metabólica celular, em especial as condições de controle anti-inflamatório e imunológico. >>
-				</p>
-				<footer class="article-info">
-					<i>Por Dr. Aylton Figueira Jr.</i>
-				</footer>
-				</div>
-			</a>
-		</div>
-
-		<footer class="footer">
-			<div class="social-icons">
-				<a href="https://www.facebook.com/profile.php?id=100095069508731" class="social-icon"><img src="/images/facebookbranco.png" alt="Facebook"></a>
-				<a href="www.instagram.com/revistas_online_" class="social-icon"><img src="/images/instagrambranco.png" alt="Instagram"></a>
-				<a href="mailto:revistasonline@sapo.pt" class="social-icon"><img src="/images/emailbranco.png" alt="Email"></a>
-			</div>
-		</footer>
-
-	</body>
-
-
-</html>
+    <footer class="footer">
+        <div class="social-icons">
+            <a href="https://www.facebook.com/profile.php?id=100095069508731" class="social-icon"><img src="/images/facebookbranco.png" alt="Facebook"></a>
+            <a href="www.instagram.com/revistas_online_" class="social-icon"><img src="/images/instagrambranco.png" alt="Instagram"></a>
+            <a href="mailto:revistasonline@sapo.pt" class="social-icon"><img src="/images/emailbranco.png" alt="Email"></a>
+        </div>
+    </footer>
