--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link href="style.css" rel="stylesheet" media="screen">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7224323364698900"
-     crossorigin="anonymous"></script>
+	crossorigin="anonymous"></script>
 </head>
 	
 	<body>
@@ -140,6 +140,18 @@
 				</div>
 			</a>
 		</div>
+
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7224323364698900"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-5l+cc+s-2a+fn"
+     data-ad-client="ca-pub-7224323364698900"
+     data-ad-slot="9766646242"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 		<footer class="footer">
 			<div class="social-icons">
