--- a/paginas/educacao001.html
+++ b/paginas/educacao001.html
@@ -12,10 +12,10 @@
 	<link href="style.css" rel="stylesheet" media="screen">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7224323364698900"
-     crossorigin="anonymous"></script>
+	crossorigin="anonymous"></script>
 </head>
 	
-	<body>
+<body class="site-container">
 
 		<div class="fix top_add_bar">
 			<div class="addbar_leaderborard">
@@ -33,21 +33,3 @@
 			</div>
 		  </div>
 		</div>
-
-		
-
-
-		
-
-		<footer class="footer">
-			<div class="social-icons">
-				<a href="https://www.facebook.com/profile.php?id=100095069508731" class="social-icon"><img src="/images/facebookbranco.png" alt="Facebook"></a>
-				<a href="www.instagram.com/revistas_online_" class="social-icon"><img src="/images/instagrambranco.png" alt="Instagram"></a>
-				<a href="mailto:revistasonline@sapo.pt" class="social-icon"><img src="/images/emailbranco.png" alt="Email"></a>
-			</div>
-		</footer>
-
-	</body>
-
-
-</html>
