--- a/paginas/saude001.html
+++ b/paginas/saude001.html
@@ -12,7 +12,7 @@
 	<link href="style.css" rel="stylesheet" media="screen">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7224323364698900"
-     crossorigin="anonymous"></script>
+	crossorigin="anonymous"></script>
 </head>
 	
 <body class="site-container">
@@ -41,10 +41,32 @@
 		<img class="imagemtexto" src="/images/AYLTON-MUSCULACAO-CANCER-AdobeStock_389711273-1199x800.jpeg">
         <p class="texto">Os resultados dos homens que participaram de treinamento de musculação, com baixo volume e intensidade moderada, reduziram entre 0,6 e 1 kg de gordura corporal, próximo a 0,5kg de gordura visceral, ao mesmo tempo que aumentaram em 0,6Kg de massa magra.</p>
         <p class="texto">A melhora da funcionalidade com o treinamento de musculação, resultou em aumento superior a 8Kg de força na extensão de joelho; 24kg no leg press; 4kg no supino e mais de 5,5kg força dos paravertebrais.</p>
-        <p class="texto">Muito importante mencionar que não houve diferença na prescrição com cargas altas e baixas, o que parece indicar efeito significativo tanto na resposta funcional como na composição corporal em curto prazo. Nesse sentido a intensidade leve e moderada na musculação parece ser uma estratégia importante no aumento da aderência em programas de exercício em homens sobreviventes de câncer de próstata. A prescrição que apresentou melhor efeito foi com intensidade de 40-60%, treinamento para todo o corpo, 1 série por grupo muscular.</p>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7224323364698900"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-5l+cc+s-2a+fn"
+     data-ad-client="ca-pub-7224323364698900"
+     data-ad-slot="9766646242"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+		<p class="texto">Muito importante mencionar que não houve diferença na prescrição com cargas altas e baixas, o que parece indicar efeito significativo tanto na resposta funcional como na composição corporal em curto prazo. Nesse sentido a intensidade leve e moderada na musculação parece ser uma estratégia importante no aumento da aderência em programas de exercício em homens sobreviventes de câncer de próstata. A prescrição que apresentou melhor efeito foi com intensidade de 40-60%, treinamento para todo o corpo, 1 série por grupo muscular.</p>
         <p class="texto">Ainda vale lembrar que o treinamento de força aumenta a produção e atividade da testosterona, aumento da atividade do micro-RNA, PGC-1a, redução da expressão de miostatina.  Portanto, atenção: o câncer atingirá mais de 10 milhões de pessoas até 2030 e será com esse grupo que os profissionais do futuro trabalharão.</p>
         <p class="texto"> Profº Dr. Aylton Figueira Jr. </p>
         <p class="texto-autor"> @ayltonfigueira.dr</p>
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7224323364698900"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-5l+cc+s-2a+fn"
+     data-ad-client="ca-pub-7224323364698900"
+     data-ad-slot="9766646242"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 		<footer class="footer">
 			<div class="social-icons">
