--- a/saude.html
+++ b/saude.html
@@ -12,7 +12,7 @@
 	<link href="style.css" rel="stylesheet" media="screen">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7224323364698900"
-     crossorigin="anonymous"></script>
+	crossorigin="anonymous"></script>
 </head>
 	
 	<body>
@@ -94,5 +94,16 @@
                 <a href="https://www.facebook.com/profile.php?id=100095069508731" class="social-icon"><img src="/images/facebookbranco.png" alt="Facebook"></a>
                 <a href="www.instagram.com/revistas_online_" class="social-icon"><img src="/images/instagrambranco.png" alt="Instagram"></a>
                 <a href="mailto:revistasonline@sapo.pt" class="social-icon"><img src="/images/emailbranco.png" alt="Email"></a>
-            </div>
+				<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7224323364698900"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-5l+cc+s-2a+fn"
+     data-ad-client="ca-pub-7224323364698900"
+     data-ad-slot="9766646242"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+			</div>
         </footer>
