--- a/index.html
+++ b/index.html
@@ -55,7 +55,24 @@
 				</div>
 			</a>
 
-			<a class="article">
+			<a class="article" href="/paginas/tecnologia001.html">
+				<figure class="article-image">
+				<img src="/images/technologia2-mini-banner.png">
+				</figure>
+				<div class="article-body">
+				<h2 class="article-title">
+					Aeolus tem morte anunciada: destroços do satélite com tecnologia portuguesa vão cair hoje no Atlântico
+				</h2>
+				<p class="article-content">
+					A Agência Espacial Europeia (ESA) iniciou, na passada segunda-feira, as manobras para a reentrada na Terra do satélite Aeolus, que estudou os ventos do planeta com tecnologia portuguesa, mas que tem “morte” anunciada hoje, quando caírem os destroços no Atlântico. >>
+				</p>
+				<footer class="article-info">
+					<i>Por Francisco Laranjeira.</i>
+				</footer>
+				</div>
+			</a>
+
+			<a class="article" href="/paginas/saude002.html">
 				<figure class="article-image">
 				<img src="/images/saude2-mini-banner.png">
 				</figure>
@@ -68,23 +85,6 @@
 				</p>
 				<footer class="article-info">
 					<i>Por Fidel Forato.</i>
-				</footer>
-				</div>
-			</a>
-
-			<a class="article">
-				<figure class="article-image">
-				<img src="/images/saude2-mini-banner.png">
-				</figure>
-				<div class="article-body">
-				<h2 class="article-title">
-					Musculação será determinante na prevenção e tratamento do câncer de próstata
-				</h2>
-				<p class="article-content">
-					O treinamento de força tem forte associação com a prevenção de mortalidade por todas as causas, considerando que o aumento da massa muscular e a força estimulam a resposta metabólica celular, em especial as condições de controle anti-inflamatório e imunológico. >>
-				</p>
-				<footer class="article-info">
-					<i>Por Dr. Aylton Figueira Jr.</i>
 				</footer>
 				</div>
 			</a>
