--- a/paginas/tecnologia001.html
+++ b/paginas/tecnologia001.html
@@ -33,3 +33,41 @@
 			</div>
 		  </div>
 		</div>
+
+		<h1 class="titulo">Aeolus tem morte anunciada: destroços do satélite com tecnologia portuguesa vão cair hoje no Atlântico</h1>
+        <p class="texto">A Agência Espacial Europeia (ESA) iniciou, na passada segunda-feira, as manobras para a reentrada na Terra do satélite Aeolus, que estudou os ventos do planeta com tecnologia portuguesa, mas que tem “morte” anunciada hoje, quando caírem os destroços no Atlântico.</p>
+        <p class="texto">O satélite, lançado em 2018 para a órbita terrestre, esteve em missão durante cinco anos, mais dois do que o prazo inicialmente previsto, com o intuito de ajudar os especialistas a melhorarem os modelos climáticos e as previsões meteorológicas.</p>
+        <p class="texto">É a primeira vez que a ESA executa a reentrada assistida de um satélite em fim de vida. O que resta de combustível do Aeolus, que tem componentes fabricados por empresas portuguesas, está a ser usado para direcioná-lo para a reentrada na atmosfera terrestre. Quando o Aeolus se encontrar a 80 quilómetros da superfície da Terra, grande parte do satélite se incendiará, embora alguns fragmentos possam chegar ao planeta.</p>
+		<img class="imagemtexto" src="/images/sat_aelostechnologia.jpg">
+        <p class="texto">A ESA, da qual Portugal é Estado-membro, assegura que o risco de um pedaço de lixo espacial atingir uma pessoa é quase três vezes menor do que o risco da queda de um meteorito.</p>
+        <p class="texto">A reentrada do Aeolus (ou o que restará dele) na Terra deverá ser finalizada na sexta-feira depois de uma equipa do centro de operações espaciais da ESA, na Alemanha, guiar o engenho para uma zona do oceano Atlântico o mais longe possível de terra firme.</p>
+        
+		<p class="texto">Muito importante mencionar que não houve diferença na prescrição com cargas altas e baixas, o que parece indicar efeito significativo tanto na resposta funcional como na composição corporal em curto prazo. Nesse sentido a intensidade leve e moderada na musculação parece ser uma estratégia importante no aumento da aderência em programas de exercício em homens sobreviventes de câncer de próstata. A prescrição que apresentou melhor efeito foi com intensidade de 40-60%, treinamento para todo o corpo, 1 série por grupo muscular.</p>
+        <p class="texto">Ainda vale lembrar que o treinamento de força aumenta a produção e atividade da testosterona, aumento da atividade do micro-RNA, PGC-1a, redução da expressão de miostatina.  Portanto, atenção: o câncer atingirá mais de 10 milhões de pessoas até 2030 e será com esse grupo que os profissionais do futuro trabalharão.</p>
+        <p class="texto-autor"> Por Francisco Larangeira </p>
+        
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7224323364698900"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-5l+cc+s-2a+fn"
+     data-ad-client="ca-pub-7224323364698900"
+     data-ad-slot="9766646242"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+
+		<footer class="footer">
+			<div class="social-icons">
+				<a href="https://www.facebook.com/profile.php?id=100095069508731" class="social-icon"><img src="/images/facebookbranco.png" alt="Facebook"></a>
+				<a href="www.instagram.com/revistas_online_" class="social-icon"><img src="/images/instagrambranco.png" alt="Instagram"></a>
+				<a href="mailto:revistasonline@sapo.pt" class="social-icon"><img src="/images/emailbranco.png" alt="Email"></a>
+			</div>
+		</footer>
+
+</body>
+
+
+</html>
