--- a/saude.html
+++ b/saude.html
@@ -34,11 +34,11 @@
 		  </div>
 		</div>
 
-		<p class="maislidas">Matérias mais lidas de Educação: </p>
+		<p class="maislidas">Matérias mais lidas de Saúde: </p>
 
 		<div class="articles-container">
 
-			<a class="article-educacao">
+			<a class="article-educacao" href="/paginas/saude001.html">
 				<figure class="article-image">
 				<img src="/images/saude1-mini-banner.jpg">
 				</figure>
@@ -55,7 +55,7 @@
 				</div>
 			</a>
 
-			<a class="article-educacao">
+			<a class="article-educacao" href="/paginas/saude002.html">
 				<figure class="article-image">
 				<img src="/images/saude2-mini-banner.png">
 				</figure>
@@ -68,23 +68,6 @@
 				</p>
 				<footer class="article-info">
 					<i>Por Fidel Forato.</i>
-				</footer>
-				</div>
-			</a>
-
-			<a class="article-educacao">
-				<figure class="article-image">
-				<img src="/images/saude2-mini-banner.png">
-				</figure>
-				<div class="article-body">
-				<h2 class="article-title">
-					Musculação será determinante na prevenção e tratamento do câncer de próstata
-				</h2>
-				<p class="article-content">
-					O treinamento de força tem forte associação com a prevenção de mortalidade por todas as causas, considerando que o aumento da massa muscular e a força estimulam a resposta metabólica celular, em especial as condições de controle anti-inflamatório e imunológico. >>
-				</p>
-				<footer class="article-info">
-					<i>Por Dr. Aylton Figueira Jr.</i>
 				</footer>
 				</div>
 			</a>
