--- a/tecnologia.html
+++ b/tecnologia.html
@@ -34,23 +34,23 @@
 		  </div>
 		</div>
 
-		<p class="maislidas">Matérias mais lidas de Educação: </p>
+		<p class="maislidas">Matérias mais lidas de Tecnologia: </p>
 
 		<div class="articles-container">
 
-			<a class="article-educacao">
+			<a class="article-educacao" href="/paginas/tecnologia001.html">
 				<figure class="article-image">
-				<img src="/images/saude1-mini-banner.jpg">
+				<img src="/images/technologia2-mini-banner.png">
 				</figure>
 				<div class="article-body">
 				<h2 class="article-title">
-					Musculação será determinante na prevenção e tratamento do câncer de próstata
+					Aeolus tem morte anunciada: destroços do satélite com tecnologia portuguesa vão cair hoje no Atlântico
 				</h2>
 				<p class="article-content">
-					O treinamento de força tem forte associação com a prevenção de mortalidade por todas as causas, considerando que o aumento da massa muscular e a força estimulam a resposta metabólica celular, em especial as condições de controle anti-inflamatório e imunológico. >>
+					A Agência Espacial Europeia (ESA) iniciou, na passada segunda-feira, as manobras para a reentrada na Terra do satélite Aeolus, que estudou os ventos do planeta com tecnologia portuguesa, mas que tem “morte” anunciada hoje, quando caírem os destroços no Atlântico. >>
 				</p>
 				<footer class="article-info">
-					<i>Por Dr. Aylton Figueira Jr.</i>
+					<i>Por Francisco Laranjeira</i>
 				</footer>
 				</div>
 			</a>
