--- a/educacao.html
+++ b/educacao.html
@@ -19,7 +19,7 @@
 
 		<div class="fix top_add_bar">
 			<div class="addbar_leaderborard">
-			  <img src="/images/bannertop.png">
+			  <img src="/images/bannertop.png" href="/index.html">
 			</div>
 		  </div>
 		  
@@ -27,8 +27,8 @@
 			<div class="mainmenu menu-wrap wrap">
 			  <ul id="nav-bottom" class="button_area">
 				<li><a href="/index.html">← Voltar</a></li>
+				<li><a href="/educacao.html">Educação</a></li>
 				<li><a href="/saude.html">Saúde</a></li>
-				<li><a href="/tecnologia.html">Tecnologia</a></li>
 			  </ul>
 			</div>
 		  </div>
@@ -38,14 +38,25 @@
 
 		<div class="articles-container">
 
+			<a class="article-educacao" href="/paginas/educacao001.html">
+				<figure class="article-image">
+				<img src="/images/educacao1-mini-banner.png">
+				</figure>
+				<div class="article-body">
+				<h2 class="article-title">
+					São Paulo reformula o Ensino Médio e inclui Educação Financeira na grade escolar.
+				</h2>
+				<p class="article-content">
+					A Agência Espacial Europeia (ESA) iniciou, na passada segunda-feira, as manobras para a reentrada na Terra do satélite Aeolus, que estudou os ventos do planeta com tecnologia portuguesa, mas que tem “morte” anunciada hoje, quando caírem os destroços no Atlântico. >>
+				</p>
+				<footer class="article-info">
+					<i>Por Andre Martins</i>
+				</footer>
+				</div>
+			</a>
 
 
 
-    <footer class="footer">
-        <div class="social-icons">
-            <a href="https://www.facebook.com/profile.php?id=100095069508731" class="social-icon"><img src="/images/facebookbranco.png" alt="Facebook"></a>
-            <a href="www.instagram.com/revistas_online_" class="social-icon"><img src="/images/instagrambranco.png" alt="Instagram"></a>
-            <a href="mailto:revistasonline@sapo.pt" class="social-icon"><img src="/images/emailbranco.png" alt="Email"></a>
 			<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7224323364698900"
      crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
@@ -57,5 +68,11 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-		</div>
+
+    <footer class="footer">
+        <div class="social-icons">
+            <a href="https://www.facebook.com/profile.php?id=100095069508731" class="social-icon"><img src="/images/facebookbranco.png" alt="Facebook"></a>
+            <a href="www.instagram.com/revistas_online_" class="social-icon"><img src="/images/instagrambranco.png" alt="Instagram"></a>
+            <a href="mailto:revistasonline@sapo.pt" class="social-icon"><img src="/images/emailbranco.png" alt="Email"></a>
+        </div>
     </footer>
