--- a/index.html
+++ b/index.html
@@ -89,19 +89,19 @@
 				</div>
 			</a>
 
-			<a class="article">
+			<a class="article" href="/paginas/educacao001.html">
 				<figure class="article-image">
-				<img src="/images/saude1-mini-banner.jpg">
+				<img src="/images/educacao1-mini-banner.png">
 				</figure>
 				<div class="article-body">
 				<h2 class="article-title">
-					Musculação será determinante na prevenção e tratamento do câncer de próstata
+					Novo ensino médio: São Paulo reformula o Ensino Médio e inclui Educação Financeira na grade escolar.
 				</h2>
 				<p class="article-content">
-					O treinamento de força tem forte associação com a prevenção de mortalidade por todas as causas, considerando que o aumento da massa muscular e a força estimulam a resposta metabólica celular, em especial as condições de controle anti-inflamatório e imunológico. >>
+					Opções de aprofundamento caem de 12 para três a partir do próximo ano; modelo vem para as escolas estaduais, mas não para as particulares. >>
 				</p>
 				<footer class="article-info">
-					<i>Por Dr. Aylton Figueira Jr.</i>
+					<i>Por Andre Martins.</i>
 				</footer>
 				</div>
 			</a>
