--- a/paginas/educacao001.html
+++ b/paginas/educacao001.html
@@ -19,7 +19,7 @@
 
 		<div class="fix top_add_bar">
 			<div class="addbar_leaderborard">
-			  <img src="/images/bannertop.png">
+			  <img src="/images/bannertop.png" href="/index.html">
 			</div>
 		  </div>
 		  
@@ -33,3 +33,50 @@
 			</div>
 		  </div>
 		</div>
+
+		<h1 class="titulo">São Paulo reformula o Ensino Médio e inclui Educação Financeira na grade escolar</h1>
+        <p class="texto">O estado de São Paulo promove uma significativa reforma no Ensino Médio com o objetivo de melhorar a qualidade da educação e preparar os estudantes para os desafios do futuro. Com base nisso, o novo currículo foi recentemente anunciado, e importantes mudanças estão sendo implementadas para atender às necessidades da juventude paulista.</p>
+        <p class="texto">Uma das mudanças mais relevantes é a inclusão da Educação Financeira na grade escolar. Conforme relatos, a iniciativa tem como propósito fornecer aos estudantes as ferramentas e o conhecimento necessários para lidar com questões financeiras de forma responsável e consciente, preparando-os para uma vida adulta financeiramente saudável. A medida é vista como essencial em um cenário em que as habilidades de gestão financeira são cada vez mais cruciais.</p>
+        <p class="texto">Além disso, o novo modelo de Ensino Médio em São Paulo reduzirá a quantidade de itinerários oferecidos, simplificando as opções disponíveis aos estudantes. Essa mudança busca facilitar a escolha dos cursos e evitar a dispersão de foco, garantindo um ensino mais direcionado e aprofundado nas áreas escolhidas pelos alunos.</p>
+		<img class="imagemtexto" src="/images/saladeaula.png">
+        <p class="texto">Outra medida importante é a inclusão da aceleração para o vestibular. O estado visa proporcionar aos estudantes uma preparação mais eficiente e completa para os exames vestibulares, a fim de aumentar suas chances de ingressar nas universidades de sua escolha. Essa ênfase no processo de seleção universitária busca preparar os jovens para um mercado de trabalho cada vez mais competitivo e exigente.</p>
+        <p class="texto">A reforma também busca promover uma maior integração entre teoria e prática no Ensino Médio, por meio de atividades práticas e projetos interdisciplinares. Isso permitirá que os estudantes não apenas adquiram conhecimentos teóricos, mas também desenvolvam habilidades práticas essenciais para a vida profissional e pessoal.</p>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7224323364698900"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-5l+cc+s-2a+fn"
+     data-ad-client="ca-pub-7224323364698900"
+     data-ad-slot="9766646242"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+		<p class="texto">As escolas terão um papel crucial no processo de implementação das mudanças, e a formação dos professores será aprimorada para garantir que estejam preparados para oferecer o melhor ensino possível. A valorização dos docentes é vista como um pilar fundamental para o sucesso da reforma educacional.</p>
+        <p class="texto">A Secretaria de Educação do estado de São Paulo prevê que a nova estrutura do Ensino Médio esteja completamente implementada em todas as escolas estaduais até o próximo ano letivo. Com essas mudanças, espera-se que os estudantes paulistas estejam melhor preparados para enfrentar os desafios acadêmicos e profissionais que os aguardam, fortalecendo assim o sistema educacional e o futuro da juventude do estado.</p>
+        <p class="texto"> Por André Martins. </p>
+        <p class="texto-autor"></p>
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7224323364698900"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-5l+cc+s-2a+fn"
+     data-ad-client="ca-pub-7224323364698900"
+     data-ad-slot="9766646242"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+		<footer class="footer">
+			<div class="social-icons">
+				<a href="https://www.facebook.com/profile.php?id=100095069508731" class="social-icon"><img src="/images/facebookbranco.png" alt="Facebook"></a>
+				<a href="www.instagram.com/revistas_online_" class="social-icon"><img src="/images/instagrambranco.png" alt="Instagram"></a>
+				<a href="mailto:revistasonline@sapo.pt" class="social-icon"><img src="/images/emailbranco.png" alt="Email"></a>
+			</div>
+		</footer>
+
+</body>
+
+
+</html>
