--- a/paginas/tecnologia001.html
+++ b/paginas/tecnologia001.html
@@ -19,7 +19,7 @@
 
 		<div class="fix top_add_bar">
 			<div class="addbar_leaderborard">
-			  <img src="/images/bannertop.png">
+			  <img src="/images/bannertop.png" href="/index.html">
 			</div>
 		  </div>
 		  
