--- a/tecnologia.html
+++ b/tecnologia.html
@@ -19,7 +19,7 @@
 
 		<div class="fix top_add_bar">
 			<div class="addbar_leaderborard">
-			  <img src="/images/bannertop.png">
+			  <img src="/images/bannertop.png" href="/index.html">
 			</div>
 		  </div>
 		  
@@ -55,39 +55,7 @@
 				</div>
 			</a>
 
-			<a class="article-educacao">
-				<figure class="article-image">
-				<img src="/images/saude2-mini-banner.png">
-				</figure>
-				<div class="article-body">
-				<h2 class="article-title">
-					Remédio contra tabagismo faz com que 1/3 das pessoas largue o cigarro
-				</h2>
-				<p class="article-content">
-					Para quem busca novas formas para parar de fumar, os resultados positivos da terceira e última fase de testes de um novo medicamento podem representar um novo caminho. Nos testes, o remédio fitoterápico citisiniclina, também conhecido cistina, da Achieve >>
-				</p>
-				<footer class="article-info">
-					<i>Por Fidel Forato.</i>
-				</footer>
-				</div>
-			</a>
 
-			<a class="article-educacao">
-				<figure class="article-image">
-				<img src="/images/saude2-mini-banner.png">
-				</figure>
-				<div class="article-body">
-				<h2 class="article-title">
-					Musculação será determinante na prevenção e tratamento do câncer de próstata
-				</h2>
-				<p class="article-content">
-					O treinamento de força tem forte associação com a prevenção de mortalidade por todas as causas, considerando que o aumento da massa muscular e a força estimulam a resposta metabólica celular, em especial as condições de controle anti-inflamatório e imunológico. >>
-				</p>
-				<footer class="article-info">
-					<i>Por Dr. Aylton Figueira Jr.</i>
-				</footer>
-				</div>
-			</a>
 
 			<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7224323364698900"
      crossorigin="anonymous"></script>
