--- a/educacao.html
+++ b/educacao.html
@@ -55,6 +55,25 @@
 				</div>
 			</a>
 
+			<div class="articles-container">
+
+				<a class="article-educacao" href="/paginas/educacao002.html">
+					<figure class="article-image">
+					<img src="/images/educacao2-mini-banner.png">
+					</figure>
+					<div class="article-body">
+					<h2 class="article-title">
+						Inteligência artificial desafia educadores e alunos.
+					</h2>
+					<p class="article-content">
+						Até que ponto a IA pode ser utilizada com segurança para auxiliar no aprendizado dos alunos? >>
+					</p>
+					<footer class="article-info">
+						<i>Por Claudia Vieira Levinsohn</i>
+					</footer>
+					</div>
+				</a>
+
 
 
 			<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7224323364698900"
