--- a/tecnologia.html
+++ b/tecnologia.html
@@ -55,6 +55,25 @@
 				</div>
 			</a>
 
+			<div class="articles-container">
+
+				<a class="article-educacao" href="/paginas/tecnologia002.html">
+					<figure class="article-image">
+					<img src="/images/technologia3-mini-banner.png">
+					</figure>
+					<div class="article-body">
+					<h2 class="article-title">
+						Qual a nova forma para manter as crianças debaixo dos olhos? Os Apple AirTags
+					</h2>
+					<p class="article-content">
+						Os Apple AirTags estão fazendo sucesso entre as mães de crianças com idade escolar, é possivel perceber um aumento no número de vendas >>
+					</p>
+					<footer class="article-info">
+						<i>Por Filipe Maria</i>
+					</footer>
+					</div>
+				</a>
+
 
 
 			<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7224323364698900"
