--- a/index.html
+++ b/index.html
@@ -115,29 +115,27 @@
 					Inteligência artificial desafia educadores e alunos
 				</h2>
 				<p class="article-content">
-					Até que ponto a IA pode ser utilizada com segurança para auxiliar no aprendizado dos alunos?
-
-Os debates sobre inteligência artificial (IA) estão em alta, e na educação não poderia ser diferente >>
+					Até que ponto a IA pode ser utilizada com segurança para auxiliar no aprendizado dos alunos? Os debates sobre inteligência artificial (IA) estão em alta, e na educação não poderia ser diferente >>
 				</p>
 				<footer class="article-info">
-					<i>Por Dr. Aylton Figueira Jr.</i>
+					<i>Por Claudia Vieira Levinsohn.</i>
 				</footer>
 				</div>
 			</a>
 
-			<a class="article">
+			<a class="article" href="/paginas/tecnologia002.html">
 				<figure class="article-image">
-				<img src="/images/saude2-mini-banner.png">
+				<img src="/images/technologia3-mini-banner.png">
 				</figure>
 				<div class="article-body">
 				<h2 class="article-title">
-					Musculação será determinante na prevenção e tratamento do câncer de próstata
+					Qual a nova forma para manter as crianças debaixo dos olhos? Os Apple AirTags
 				</h2>
 				<p class="article-content">
-					O treinamento de força tem forte associação com a prevenção de mortalidade por todas as causas, considerando que o aumento da massa muscular e a força estimulam a resposta metabólica celular, em especial as condições de controle anti-inflamatório e imunológico. >>
+					Os Apple AirTags estão fazendo sucesso entre as mães de crianças com idade escolar, é possivel perceber um aumento no número de vendas >>
 				</p>
 				<footer class="article-info">
-					<i>Por Dr. Aylton Figueira Jr.</i>
+					<i>Por Filipe Maria.</i>
 				</footer>
 				</div>
 			</a>
