--- a/tecnologia.html
+++ b/tecnologia.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="font/font.css">
 	<link href="style.css" rel="stylesheet" media="screen">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7224323364698900"
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7950959261306674"
      crossorigin="anonymous"></script>
 </head>
 	
@@ -57,6 +57,28 @@
 
 			<div class="articles-container">
 
+				<a class="article-educacao" href="/paginas/revolut.html">
+					<figure class="article-image">
+					<img src="/images/technologia4-mini-banner.png">
+					</figure>
+					<div class="article-body">
+					<h2 class="article-title">
+						Qual a nova forma para manter as crianças debaixo dos olhos? Os Apple AirTags
+					</h2>
+					<p class="article-content">
+						Conhecida pelos brasileiros como a Nubank Europeia, a Revolut é uma das fintechs mais populares na Europa, chegou ao Brasil com sua conta digital, oferecendo aos brasileiros a facilidade de converter automaticamente dinheiro em até 27 moedas, incluindo dólar e euro, a qualquer momento do dia e com compatibilidade com Pix >>
+					</p>
+					<footer class="article-info">
+						<i>Por Beatriz Rocha</i>
+					</footer>
+					</div>
+				</a>
+
+
+
+
+			<div class="articles-container">
+
 				<a class="article-educacao" href="/paginas/tecnologia002.html">
 					<figure class="article-image">
 					<img src="/images/technologia3-mini-banner.png">
@@ -76,7 +98,7 @@
 
 
 
-			<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7224323364698900"
+			<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7950959261306674"
      crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
      style="display:block"
