--- a/tecnologia.html
+++ b/tecnologia.html
@@ -88,7 +88,7 @@
 						Qual a nova forma para manter as crianças debaixo dos olhos? Os Apple AirTags
 					</h2>
 					<p class="article-content">
-						Os Apple AirTags estão fazendo sucesso entre as mães de crianças com idade escolar, é possivel perceber um aumento no número de vendas >>
+						Os Apple AirTags estão fazendo sucesso entre as mães de crianças com idade escolar, é possivel perceber um aumento no número de vendas, porém, as AirTags estão gerando intusiasmo e também controvérsias dos usuários  >>
 					</p>
 					<footer class="article-info">
 						<i>Por Filipe Maria</i>
