--- a/paginas/educacao001.html
+++ b/paginas/educacao001.html
@@ -70,8 +70,8 @@
 
 		<footer class="footer">
 			<div class="social-icons">
-				<a href="https://www.facebook.com/profile.php?id=100095069508731" class="social-icon"><img src="/images/facebookbranco.png" alt="Facebook"></a>
-				<a href="www.instagram.com/revistas_online_" class="social-icon"><img src="/images/instagrambranco.png" alt="Instagram"></a>
+				<a href="https://www.facebook.com/profile.php?id=100095069508731" target="_blank" class="social-icon"><img src="/images/facebookbranco.png" alt="Facebook"></a>
+				<a href="https://www.instagram.com/revistas_online_/" target="_blank" class="social-icon"><img src="/images/instagrambranco.png" alt="Instagram"></a>
 				<a href="mailto:revistasonline@sapo.pt" class="social-icon"><img src="/images/emailbranco.png" alt="Email"></a>
 			</div>
 		</footer>
