--- a/saude.html
+++ b/saude.html
@@ -74,19 +74,20 @@
 
         <footer class="footer">
             <div class="social-icons">
-                <a href="https://www.facebook.com/profile.php?id=100095069508731" class="social-icon"><img src="/images/facebookbranco.png" alt="Facebook"></a>
-                <a href="www.instagram.com/revistas_online_" class="social-icon"><img src="/images/instagrambranco.png" alt="Instagram"></a>
+                <<a href="https://www.facebook.com/profile.php?id=100095069508731" target="_blank" class="social-icon"><img src="/images/facebookbranco.png" alt="Facebook"></a>
+				<a href="https://www.instagram.com/revistas_online_/" target="_blank" class="social-icon"><img src="/images/instagrambranco.png" alt="Instagram"></a>
                 <a href="mailto:revistasonline@sapo.pt" class="social-icon"><img src="/images/emailbranco.png" alt="Email"></a>
+
 				<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7950959261306674"
-     crossorigin="anonymous"></script>
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-format="fluid"
-     data-ad-layout-key="-5l+cc+s-2a+fn"
-     data-ad-client="ca-pub-7224323364698900"
-     data-ad-slot="9766646242"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+     			crossorigin="anonymous"></script>
+				<ins class="adsbygoogle"
+     			style="display:block"
+     			data-ad-format="fluid"
+     			data-ad-layout-key="-5l+cc+s-2a+fn"
+     			data-ad-client="ca-pub-7224323364698900"
+     			data-ad-slot="9766646242"></ins>
+				<script>
+     			(adsbygoogle = window.adsbygoogle || []).push({});
+				</script>
 			</div>
         </footer>
