--- a/tecnologia.html
+++ b/tecnologia.html
@@ -88,7 +88,7 @@
 						Qual a nova forma para manter as crianças debaixo dos olhos? Os Apple AirTags
 					</h2>
 					<p class="article-content">
-						Os Apple AirTags estão fazendo sucesso entre as mães de crianças com idade escolar, é possivel perceber um aumento no número de vendas, porém, as AirTags estão gerando intusiasmo e também controvérsias dos usuários  >>
+						Os Apple AirTags estão fazendo sucesso entre as mães de crianças com idade escolar, é possivel perceber um aumento no número de vendas >>
 					</p>
 					<footer class="article-info">
 						<i>Por Filipe Maria</i>
@@ -112,8 +112,8 @@
 
     <footer class="footer">
         <div class="social-icons">
-            <a href="https://www.facebook.com/profile.php?id=100095069508731" class="social-icon"><img src="/images/facebookbranco.png" alt="Facebook"></a>
-            <a href="www.instagram.com/revistas_online_" class="social-icon"><img src="/images/instagrambranco.png" alt="Instagram"></a>
+            <a href="https://www.facebook.com/profile.php?id=100095069508731" target="_blank" class="social-icon"><img src="/images/facebookbranco.png" alt="Facebook"></a>
+				<a href="https://www.instagram.com/revistas_online_/" target="_blank" class="social-icon"><img src="/images/instagrambranco.png" alt="Instagram"></a>
             <a href="mailto:revistasonline@sapo.pt" class="social-icon"><img src="/images/emailbranco.png" alt="Email"></a>
         </div>
     </footer>
