--- a/tecnologia.html
+++ b/tecnologia.html
@@ -88,7 +88,7 @@
 						Qual a nova forma para manter as crianças debaixo dos olhos? Os Apple AirTags
 					</h2>
 					<p class="article-content">
-						Os Apple AirTags estão fazendo sucesso entre as mães de crianças com idade escolar, é possivel perceber um aumento no número de vendas >>
+						A chegada dos Apple AirTags ao mercado foi recebida com entusiasmo e controvérsia, conforme relatórios destacam o bom, o mau e os vilões dessa nova tecnologia. Originalmente concebidos como dispositivos para localizar objetos perdidos, os AirTags rapidamente se tornaram uma solução inovadora para manter as crianças seguras e monitoradas. No entanto, o uso desses pequenos rastreadores não passou despercebido, levantando questões sobre privacidade e possíveis usos indevidos. >>
 					</p>
 					<footer class="article-info">
 						<i>Por Filipe Maria</i>
