--- a/saude.html
+++ b/saude.html
@@ -38,6 +38,23 @@
 
 		<div class="articles-container">
 
+			<a class="article-educacao" href="/paginas/saude003.html">
+				<figure class="article-image">
+				<img src="/images/saude3-mini-banner.png">
+				</figure>
+				<div class="article-body">
+				<h2 class="article-title">
+					Inteligência Artificial na Detecção de Câncer de Mama: Estudo Aponta para Avanços Promissores
+				</h2>
+				<p class="article-content">
+					Avanços na área médica estão trazendo resultados promissores no campo da detecção precoce do câncer de mama, graças à integração da inteligência artificial (IA). Um estudo realizado na Suécia trouxe à tona dados que indicam >>
+				</p>
+				<footer class="article-info">
+					<i>Por Kristina Lång, PhD .</i>
+				</footer>
+				</div>
+			</a>
+
 			<a class="article-educacao" href="/paginas/saude001.html">
 				<figure class="article-image">
 				<img src="/images/saude1-mini-banner.jpg">
