--- a/tecnologia.html
+++ b/tecnologia.html
@@ -63,7 +63,7 @@
 					</figure>
 					<div class="article-body">
 					<h2 class="article-title">
-						Qual a nova forma para manter as crianças debaixo dos olhos? Os Apple AirTags
+						A Revolut, uma das fintechs mais populares na Europa, chegou ao Brasil
 					</h2>
 					<p class="article-content">
 						Conhecida pelos brasileiros como a Nubank Europeia, a Revolut é uma das fintechs mais populares na Europa, chegou ao Brasil com sua conta digital, oferecendo aos brasileiros a facilidade de converter automaticamente dinheiro em até 27 moedas, incluindo dólar e euro, a qualquer momento do dia e com compatibilidade com Pix >>
