--- a/saude.html
+++ b/saude.html
@@ -38,6 +38,25 @@
 
 		<div class="articles-container">
 
+			<a class="article-educacao" href="/paginas/saude004.html">
+				<figure class="article-image">
+				<img src="/images/saude4-mini-banner.png">
+				</figure>
+				<div class="article-body">
+				<h2 class="article-title">
+					Treinamento de Força com Supervisão por Personal Trainer: Impacto em Praticantes Experientes
+				</h2>
+				<p class="article-content">
+					A prescrição individualizada e o acompanhamento das sessões de treinamento de força (TF) são funções cruciais dos personal trainers. No entanto, poucos estudos exploraram como a supervisão afeta praticantes experientes >>
+				</p>
+				<footer class="article-info">
+					<i>Por Prof. Esp. Diego Fioravante Rilo </i>
+				</footer>
+				</div>
+			</a>
+
+		<div class="articles-container">
+
 			<a class="article-educacao" href="/paginas/saude003.html">
 				<figure class="article-image">
 				<img src="/images/saude3-mini-banner.png">
