--- a/tecnologia.html
+++ b/tecnologia.html
@@ -99,16 +99,16 @@
 
 
 			<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7950959261306674"
-     crossorigin="anonymous"></script>
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-format="fluid"
-     data-ad-layout-key="-5l+cc+s-2a+fn"
-     data-ad-client="ca-pub-7224323364698900"
-     data-ad-slot="9766646242"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+				crossorigin="anonymous"></script>
+		   <ins class="adsbygoogle"
+				style="display:block"
+				data-ad-format="fluid"
+				data-ad-layout-key="-58+c9+16-1v+dp"
+				data-ad-client="ca-pub-7950959261306674"
+				data-ad-slot="9385621847"></ins>
+		   <script>
+				(adsbygoogle = window.adsbygoogle || []).push({});
+		   </script>
 
     <footer class="footer">
         <div class="social-icons">
