--- a/paginas/educacao002.html
+++ b/paginas/educacao002.html
@@ -59,17 +59,26 @@
 		<p class="texto">Ainda não existe um grupo de trabalho para discutir o tema na Secretaria de Educação Básica (Seb), do Ministério da Educação (MEC), mas a pasta tem participado de encontros a respeito, como na reunião na Unesco, a agência das Nações Unidas para a Educação, a Ciência e a Cultura. Seguimos confiantes de que a tecnologia atue para somar na construção de um ensino melhor para que possamos desenvolver profissionais qualificados e que farão a diferença no futuro.</p>
 		<p class="texto"> Por Claudia Vieira Levinsohn. </p>
         <p class="texto-autor"></p>
+
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7950959261306674"
-     crossorigin="anonymous"></script>
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-format="fluid"
-     data-ad-layout-key="-5l+cc+s-2a+fn"
-     data-ad-client="ca-pub-7224323364698900"
-     data-ad-slot="9766646242"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+				crossorigin="anonymous"></script>
+		   <ins class="adsbygoogle"
+				style="display:block"
+				data-ad-format="fluid"
+				data-ad-layout-key="-58+c9+16-1v+dp"
+				data-ad-client="ca-pub-7950959261306674"
+				data-ad-slot="9385621847"></ins>
+		   <script>
+				(adsbygoogle = window.adsbygoogle || []).push({});
+		   </script>
+
+    <footer class="footer">
+        <div class="social-icons">
+            <a href="https://www.facebook.com/profile.php?id=100095069508731" target="_blank" class="social-icon"><img src="/images/facebookbranco.png" alt="Facebook"></a>
+				<a href="https://www.instagram.com/revistas_online_/" target="_blank" class="social-icon"><img src="/images/instagrambranco.png" alt="Instagram"></a>
+            <a href="mailto:revistasonline@sapo.pt" class="social-icon"><img src="/images/emailbranco.png" alt="Email"></a>
+        </div>
+    </footer>
 
 		<footer class="footer">
 			<div class="social-icons">
