--- a/paginas/saude001.html
+++ b/paginas/saude001.html
@@ -56,15 +56,26 @@
         <p class="texto">Ainda vale lembrar que o treinamento de força aumenta a produção e atividade da testosterona, aumento da atividade do micro-RNA, PGC-1a, redução da expressão de miostatina.  Portanto, atenção: o câncer atingirá mais de 10 milhões de pessoas até 2030 e será com esse grupo que os profissionais do futuro trabalharão.</p>
         <p class="texto"> Profº Dr. Aylton Figueira Jr. </p>
         <p class="texto-autor"> @ayltonfigueira.dr</p>
-		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7950959261306674"
-     crossorigin="anonymous"></script>
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-format="fluid"
-     data-ad-layout-key="-5l+cc+s-2a+fn"
-     data-ad-client="ca-pub-7224323364698900"
-     data-ad-slot="9766646242"></ins>
-<script>
+
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7950959261306674"
+		crossorigin="anonymous"></script>
+   <ins class="adsbygoogle"
+		style="display:block"
+		data-ad-format="fluid"
+		data-ad-layout-key="-58+c9+16-1v+dp"
+		data-ad-client="ca-pub-7950959261306674"
+		data-ad-slot="9385621847"></ins>
+   <script>
+		(adsbygoogle = window.adsbygoogle || []).push({});
+   </script>
+
+<footer class="footer">
+<div class="social-icons">
+	<a href="https://www.facebook.com/profile.php?id=100095069508731" target="_blank" class="social-icon"><img src="/images/facebookbranco.png" alt="Facebook"></a>
+		<a href="https://www.instagram.com/revistas_online_/" target="_blank" class="social-icon"><img src="/images/instagrambranco.png" alt="Instagram"></a>
+	<a href="mailto:revistasonline@sapo.pt" class="social-icon"><img src="/images/emailbranco.png" alt="Email"></a>
+</div>
+</footer>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 
