--- a/paginas/saude003.html
+++ b/paginas/saude003.html
@@ -47,17 +47,25 @@
         <p class="texto-autor">Por Kristina Lång, PhD. </p>
 
 
-		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7950959261306674"
-     crossorigin="anonymous"></script>
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-format="fluid"
-     data-ad-layout-key="-5l+cc+s-2a+fn"
-     data-ad-client="ca-pub-7224323364698900"
-     data-ad-slot="9766646242"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7950959261306674"
+		crossorigin="anonymous"></script>
+   <ins class="adsbygoogle"
+		style="display:block"
+		data-ad-format="fluid"
+		data-ad-layout-key="-58+c9+16-1v+dp"
+		data-ad-client="ca-pub-7950959261306674"
+		data-ad-slot="9385621847"></ins>
+   <script>
+		(adsbygoogle = window.adsbygoogle || []).push({});
+   </script>
+
+<footer class="footer">
+<div class="social-icons">
+	<a href="https://www.facebook.com/profile.php?id=100095069508731" target="_blank" class="social-icon"><img src="/images/facebookbranco.png" alt="Facebook"></a>
+		<a href="https://www.instagram.com/revistas_online_/" target="_blank" class="social-icon"><img src="/images/instagrambranco.png" alt="Instagram"></a>
+	<a href="mailto:revistasonline@sapo.pt" class="social-icon"><img src="/images/emailbranco.png" alt="Email"></a>
+</div>
+</footer>
 
 		<footer class="footer">
 			<div class="social-icons">
