--- a/saude.html
+++ b/saude.html
@@ -50,7 +50,7 @@
 					A prescrição individualizada e o acompanhamento das sessões de treinamento de força (TF) são funções cruciais dos personal trainers. No entanto, poucos estudos exploraram como a supervisão afeta praticantes experientes >>
 				</p>
 				<footer class="article-info">
-					<i>Por Prof. Esp. Diego Fioravante Rilo </i>
+					<i>Por Prof.  </i>
 				</footer>
 				</div>
 			</a>
@@ -108,22 +108,22 @@
 				</div>
 			</a>
 
-        <footer class="footer">
-            <div class="social-icons">
-                <<a href="https://www.facebook.com/profile.php?id=100095069508731" target="_blank" class="social-icon"><img src="/images/facebookbranco.png" alt="Facebook"></a>
-				<a href="https://www.instagram.com/revistas_online_/" target="_blank" class="social-icon"><img src="/images/instagrambranco.png" alt="Instagram"></a>
-                <a href="mailto:revistasonline@sapo.pt" class="social-icon"><img src="/images/emailbranco.png" alt="Email"></a>
+			<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7950959261306674"
+			crossorigin="anonymous"></script>
+	   <ins class="adsbygoogle"
+			style="display:block"
+			data-ad-format="fluid"
+			data-ad-layout-key="-58+c9+16-1v+dp"
+			data-ad-client="ca-pub-7950959261306674"
+			data-ad-slot="9385621847"></ins>
+	   <script>
+			(adsbygoogle = window.adsbygoogle || []).push({});
+	   </script>
 
-				<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7950959261306674"
-     			crossorigin="anonymous"></script>
-				<ins class="adsbygoogle"
-     			style="display:block"
-     			data-ad-format="fluid"
-     			data-ad-layout-key="-5l+cc+s-2a+fn"
-     			data-ad-client="ca-pub-7224323364698900"
-     			data-ad-slot="9766646242"></ins>
-				<script>
-     			(adsbygoogle = window.adsbygoogle || []).push({});
-				</script>
-			</div>
-        </footer>
+<footer class="footer">
+	<div class="social-icons">
+		<a href="https://www.facebook.com/profile.php?id=100095069508731" target="_blank" class="social-icon"><img src="/images/facebookbranco.png" alt="Facebook"></a>
+			<a href="https://www.instagram.com/revistas_online_/" target="_blank" class="social-icon"><img src="/images/instagrambranco.png" alt="Instagram"></a>
+		<a href="mailto:revistasonline@sapo.pt" class="social-icon"><img src="/images/emailbranco.png" alt="Email"></a>
+	</div>
+</footer>
