--- a/tecnologia.html
+++ b/tecnologia.html
@@ -36,8 +36,26 @@
 
 		<p class="maislidas">Matérias mais lidas de Tecnologia: </p>
 
-		<div class="articles-container">
 
+		<div class="articles-container">
+			<a class="article-educacao" href="/paginas/tecnologia003.html">
+				<figure class="article-image">
+				<img src="/images/technologia5-mini-banner.png">
+				</figure>
+				<div class="article-body">
+				<h2 class="article-title">
+					'Superaplicativos' vão reunir todos os bancos do cliente em um único local, diz presidente do BC
+				</h2>
+				<p class="article-content">
+					Presidente do BC diz que o superapp permitirá uma maior competição entre os bancos na oferta de produtos e serviços. Dentro do 'agregador financeiro', as pessoas poderão saber a totalidade de débitos e de créditos em todos os bancos. >>
+				</p>
+				<footer class="article-info">
+					<i>Por Alexandro Martello</i>
+				</footer>
+				</div>
+			</a>
+
+		<div class="articles-container">
 			<a class="article-educacao" href="/paginas/tecnologia001.html">
 				<figure class="article-image">
 				<img src="/images/technologia2-mini-banner.png">
@@ -56,7 +74,6 @@
 			</a>
 
 			<div class="articles-container">
-
 				<a class="article-educacao" href="/paginas/revolut.html">
 					<figure class="article-image">
 					<img src="/images/technologia4-mini-banner.png">
@@ -75,10 +92,7 @@
 				</a>
 
 
-
-
 			<div class="articles-container">
-
 				<a class="article-educacao" href="/paginas/tecnologia002.html">
 					<figure class="article-image">
 					<img src="/images/technologia3-mini-banner.png">
